# django-webapp

./: Dockerfile  README.md  pyproject.toml
brew_app/: apps.py  forms.py  models.py  request_handler.py  urls.py  views.py
brew_app/migrations/: 0001_initial.py  0002_auto_20210727_1553.py
brew_app/static/brew_app/: index.html
brew_app/templates/brew_app/: add.html  base.html  index.html
django_web/: settings.py  urls.py
